--- a/index.html
+++ b/index.html
@@ -18,37 +18,30 @@
   </form>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      console.log("Script loaded");
+  document.addEventListener('DOMContentLoaded', function () {
+    console.log("Script loaded");
 
-      const form = document.getElementById('taskForm');
-      form.addEventListener('submit', async function (e) {
-        e.preventDefault();
-        console.log("Form submitted");
+    const form = document.getElementById('taskForm');
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      console.log("Form submitted");
 
-        const formData = new FormData(form);
+      const formData = new FormData(form);
 
-        try {
-          const response = await fetch('https://script.google.com/macros/s/AKfycbypdNfj2awbOd_7X4dRre_fQGwkTDp0y-fmkXMjowYSsMm9-tMapG8IH_UcRVP3Ksbl/exec', {
-            method: 'POST',
-            body: formData
-          });
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbypdNfj2awbOd_7X4dRre_fQGwkTDp0y-fmkXMjowYSsMm9-tMapG8IH_UcRVP3Ksbl/exec', {
+          method: 'POST',
+          body: formData,
+          mode: 'no-cors'  // 👈 This is the key fix
+        });
 
-          const text = await response.text();
-          console.log("Response:", text);
-
-          if (response.ok && text.includes("Success")) {
-            alert('Task submitted!');
-            form.reset();
-          } else {
-            alert('Submission failed: ' + text);
-          }
-        } catch (err) {
-          console.error("Error:", err);
-          alert('Network or script error: ' + err.message);
-        }
-      });
+        console.log("Response sent (no-cors mode)");
+        alert('Task submitted!');
+        form.reset();
+      } catch (err) {
+        console.error("Error:", err);
+        alert('Network or script error: ' + err.message);
+      }
     });
-  </script>
-</body>
-</html>
+  });
+</script>
