--- a/index.html
+++ b/index.html
@@ -7,41 +7,54 @@
 <body>
   <h2>Driftraq Task Form</h2>
   <form id="taskForm">
-    <input name="taskName" placeholder="Task name" required><br>
-    <input name="category" placeholder="Category" required><br>
-    <input name="goalType" placeholder="Goal type" required><br>
-    <input name="energyLevel" placeholder="Energy level" required><br>
-    <textarea name="notes" placeholder="Notes"></textarea><br>
-    <input type="date" name="date" required><br>
-    <input type="email" name="emailEntry" placeholder="Your email" required><br>
+    <input name="taskName" id="taskName" placeholder="Task name" required><br>
+    <input name="category" id="category" placeholder="Category" required><br>
+    <input name="goalType" id="goalType" placeholder="Goal type" required><br>
+    <input name="energyLevel" id="energyLevel" placeholder="Energy level" required><br>
+    <textarea name="notes" id="notes" placeholder="Notes"></textarea><br>
+    <input type="date" name="date" id="date" required><br>
+    <input type="email" name="emailEntry" id="emailEntry" placeholder="Your email" required><br>
     <button type="submit">Submit</button>
   </form>
 
   <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    console.log("Script loaded");
+    document.addEventListener('DOMContentLoaded', function () {
+      console.log("Script loaded");
 
-    const form = document.getElementById('taskForm');
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      console.log("Form submitted");
+      const form = document.getElementById('taskForm');
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault();
+        console.log("Form submitted");
 
-      const formData = new FormData(form);
+        const data = {
+          taskName: document.getElementById('taskName').value,
+          category: document.getElementById('category').value,
+          goalType: document.getElementById('goalType').value,
+          energyLevel: document.getElementById('energyLevel').value,
+          notes: document.getElementById('notes').value,
+          date: document.getElementById('date').value,
+          emailEntry: document.getElementById('emailEntry').value
+        };
 
-      try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbypdNfj2awbOd_7X4dRre_fQGwkTDp0y-fmkXMjowYSsMm9-tMapG8IH_UcRVP3Ksbl/exec', {
-          method: 'POST',
-          body: formData,
-          mode: 'no-cors'  // 👈 This is the key fix
-        });
+        try {
+          const response = await fetch('https://driftraq-proxy.vercel.app/api/submit', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+          });
 
-        console.log("Response sent (no-cors mode)");
-        alert('Task submitted!');
-        form.reset();
-      } catch (err) {
-        console.error("Error:", err);
-        alert('Network or script error: ' + err.message);
-      }
+          const result = await response.text();
+          console.log("Response from proxy:", result);
+          alert('Task submitted!');
+          form.reset();
+        } catch (err) {
+          console.error("Error:", err);
+          alert('Network or script error: ' + err.message);
+        }
+      });
     });
-  });
-</script>
+  </script>
+</body>
+</html>
