--- a/index.html
+++ b/index.html
@@ -18,37 +18,40 @@
   </form>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const form = document.getElementById('taskForm');
-      form.addEventListener('submit', async function (e) {
-        e.preventDefault();
+  document.addEventListener('DOMContentLoaded', function () {
+    const form = document.getElementById('taskForm');
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
 
-        const formData = new FormData(form);
-        const params = new URLSearchParams();
-        for (const [key, value] of formData.entries()) {
-          params.append(key, value);
-        }
+      const data = {
+        taskName: form.taskName.value,
+        category: form.category.value,
+        goalType: form.goalType.value,
+        energyLevel: form.energyLevel.value,
+        notes: form.notes.value,
+        date: form.date.value,
+        emailEntry: form.emailEntry.value
+      };
 
-        try {
-          const response = await fetch('https://script.google.com/macros/s/AKfycbypdNfj2awbOd_7X4dRre_fQGwkTDp0y-fmkXMjowYSsMm9-tMapG8IH_UcRVP/exec', {
-  method: 'POST',
-  headers: {
-    'Content-Type': 'application/x-www-form-urlencoded'
-  },
-  body: params.toString()
-});
+      try {
+        const response = await fetch('https://driftraq-proxy.vercel.app/api/submit', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(data)
+        });
 
-          const result = await response.text();
-          console.log("Response:", result);
-          alert('Task submitted!');
-          form.reset();
-        } catch (err) {
-          console.error("Error:", err);
-          alert('Submission failed: ' + err.message);
-        }
-      });
+        const result = await response.text();
+        console.log("Response from proxy:", result);
+        alert('Task submitted!');
+        form.reset();
+      } catch (err) {
+        console.error("Error:", err);
+        alert('Submission failed: ' + err.message);
+      }
     });
-  </script>
+  });
+</script>
 </body>
 </html>
-
